# kool-craft-launcher

./: .editorconfig  .prettierrc  README.md  components.json  index.html  package.json  pnpm-lock.yaml  sync-metadata.cjs  tsconfig.json  vite.config.ts
locales/en-US/: main.ftl
locales/zh-CN/: main.ftl
src/: .gitignore  App.vue  main.ts  style.css  vue-i18n.d.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  windows-app-manifest.xml
src-tauri/capabilities/: default.json
src-tauri/crates/i18n-parser/: Cargo.toml
src-tauri/crates/i18n-parser/src/: lib.rs
src-tauri/crates/macros/: Cargo.toml
src-tauri/crates/macros/src/: event.rs  inject_args.rs  inventory.rs  lib.rs  settings.rs  settings_type.rs
src-tauri/macros/src/: command.rs  config.rs  config_type.rs  event.rs  lib.rs  settings.rs  settings_type.rs
src-tauri/src/: codegen.rs  commands.rs  constants.rs  gen_type_bindings.rs  lib.rs  main.rs
src-tauri/src/auth/: mod.rs  model.rs  models.rs  offline.rs
src-tauri/src/auth/microsoft/: browser_oauth.rs  command.rs  commands.rs  game_profile.rs  in_app_oauth.rs  microsoft_login.rs  minecraft_token.rs  mod.rs  model.rs  xbox_live_token.rs  xsts_token.rs
src-tauri/src/config/: codegen.rs  commands.rs  components.rs  events.rs  macros.rs  mod.rs  persistence.rs  store.rs  traits.rs
src-tauri/src/config/modules/: theme.rs
src-tauri/src/constants/: mod.rs
src-tauri/src/detector/: loader.rs  mod.rs  model.rs  resolver.rs  tests.rs
src-tauri/src/game_launcher/: arguments.rs  classpath.rs  executor.rs  launch.rs  mod.rs  model.rs  models.rs  rule.rs
src-tauri/src/game_resolver/: loader.rs  mod.rs  model.rs  models.rs  resolve.rs  tests.rs
src-tauri/src/i18n/: codegen.rs  locales.rs  mod.rs
src-tauri/src/ipc/: command.rs  event.rs  mod.rs
src-tauri/src/java_runtime/: inspector.rs  mod.rs  model.rs  models.rs  scanner.rs  vendors.rs
src-tauri/src/launcher/: arguments.rs  aruments.rs  classpath.rs  launch.rs  launcher.rs  mod.rs  model.rs  rule.rs
src-tauri/src/resolver/: loader.rs  mod.rs  model.rs  resolve.rs  resolver.rs  scanner.rs  tests.rs
src-tauri/src/scheduler/: builder.rs  combinators.rs  commands.rs  context.rs  core.rs  mod.rs  model.rs  monitor.rs  progress.rs  runtime.rs  status.rs  sync.rs  tests.rs  traits.rs  types.rs  view.rs
src-tauri/src/scheduler/combinators/: chain.rs  fn_task.rs  mod.rs  named_task.rs  parallel.rs  race.rs
src-tauri/src/settings/: codegen.rs  commands.rs  components.rs  events.rs  macros.rs  migration.rs  mod.rs  persistence.rs  store.rs  traits.rs
src-tauri/src/settings/modules/: general.rs  mod.rs  theme.rs
src-tauri/src/theme/: commands.rs  config.rs  effect.rs  mod.rs  model.rs  models.rs  tests.rs  utils.rs
src-tauri/src/ui_theme/: commands.rs  mod.rs  model.rs  models.rs  tests.rs  utils.rs
src-tauri/src/utils/: abs_path_buf.rs  codegen.rs  command.rs  dirs.rs  executor.rs  global_app_handle.rs  mod.rs  os_info.rs
src/components/app/: AppBackground.vue  AppSidebar.vue  WindowControls.vue
src/components/settings/: SettingsGroup.vue  SettingsLeaf.vue
src/components/settings/widgets/: BaseInput.vue  BaseSelect.vue  BaseSwitch.vue  ColorPicker.vue  LanguageSelector.vue
src/components/ui/avatar/: Avatar.vue  AvatarFallback.vue  AvatarImage.vue
src/components/ui/button/: Button.vue
src/components/ui/input/: Input.vue
src/composables/: useI18n.ts  useSchemaValidation.ts  wallpaper.ts
src/pages/: index.vue
src/pages/settings/: index.vue
src/services/: config.ts  dark.ts  i18n.ts  log.ts  router.ts  settings.ts  theme.ts  wallpaper.ts
src/services/backend/: config.ts  theme.ts
src/services/settings/: registry.ts  schema.ts  value.ts
src/stores/: theme.ts
src/types/: theme.ts
(+17 files in other folders)
