[package]
name = "kool-craft-launcher"
version = "1.0.0"
edition = "2024"

[dependencies]
# common dependencies
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
dashmap = "6.1"
dirs = "6.0"
futures = "0.3"
log = "0.4"
os_info = "3.7"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tap = "1.0"
tempfile = "3"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
uuid = { version = "1", features = ["v4", "serde"] }

# tauri dependencies
tauri = { version = "2.9", features = [] }
tauri-plugin-log = "2.7"

# theme dependencies
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
window-vibrancy = "0.7.1"
wallpaper = "3.2"

[lib]
name = "kool_craft_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
