[package]
name = "kool-craft-launcher"
version = "1.0.0"
edition = "2024"
default-run = "kool-craft-launcher"

[dependencies]
# common dependencies
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
chrono = "0.4"
dashmap = "6.1"
dirs = "6.0"
fluent-templates = "0.13"
futures = "0.3"
heck = "0.5"
indoc = "2.0"
inventory = "0.3"
log = "0.4"
md5 = "0.8.0"
os_info = "3.7"
parking_lot = "0.12"
path-absolutize = "3.1"
regex = "1.12"
reqwest = { version = "0.13", features = ["json", "form"] }
schemars = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
specta = { version = "2.0.0-rc", features = ["uuid", "chrono", "url", "tokio", "time", "serde", "serde_json", "derive", "export", "function"] }
specta-typescript = { version = "0.0", features = ["function"] }
tap = "1.0"
tempfile = "3"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
unic-langid = "0.9"
url = "2.5"
uuid = { version = "1", features = ["v4", "serde"] }

# tauri dependencies
tauri = { version = "2.9", features = [] }
tauri-plugin-http = "2.5"
tauri-plugin-log = "2.7"

# theme dependencies
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
window-vibrancy = "0.7.1"
wallpaper = "3.2"

# macros
macros = { path = "./macros" }

[lib]
name = "kool_craft_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "codegen"
path = "src/codegen.rs"

[build-dependencies]
anyhow = "1.0"
fluent-syntax = "0.12"
indoc = "2.0"
tap = "1.0"
tauri-build = { version = "2.5", features = [] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
